Bug 1091986 (part 1) - Remove an over-zealous assertion in Vector.h.